@@ -15,6 +15,7 @@ version 0.10.0:
 	* Removed the Lag-O-Meter
 	* Socks 4/5 Proxy works
 	* Buddy Pounces are now saved in .gaimrc
+	# Ability to merge gaim, aim2, aim4 buddylists. Thanks again bmiller!
 	
 version 0.9.20 (07/14/2000):
 	* More plugin events, more plugin features
